--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-    release:
-      types:
-        - [published]
-    pull_request:
+  release:
+    types:
+      - "published"
+  pull_request:
 
 jobs:
   terraform:
@@ -82,8 +82,8 @@ jobs:
           elif [[ ${{ github.ref }} == 'refs/heads/main' ]]; then echo ::set-output name=environment::staging
           else echo ::set-output name=environment::unknown
           fi
-      
-       name: Terraform Apply Global
+
+      - name: Terraform Apply Global
         if: github.event_name == 'push' || github.event_name == 'release'
         working-directory: 07-managing-multiple-environments/file-structure/global
         run: |
