--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -44,7 +44,7 @@ jobs:
         run: terraform plan -var db_pass=${{secrets.DB_PASS}} -no-color
         continue-on-error: true
 
-      - uses: actions/github-scripts@0.9.0
+      - uses: actions/github-script@0.9.0
         if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
