--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Terraform Apply Global
         if: github.event_name == 'push' || github.event_name == 'release'
-        working-directory: environments/file-structure/global
+        working-directory: environments/global
         run: |
           terraform init
           terraform apply -auto-approve
@@ -96,7 +96,7 @@ jobs:
 
       - name: Terraform Apply Production
         if: steps.check-tag.outputs.environment == 'production' && github.event_name == 'release'
-        working-directory: environments/file-structure/production
+        working-directory: environments/production
         run: |
           terraform init
           terraform apply -var db_pass=${{secrets.DB_PASS }} -auto-approve
